# but

./: .codefresh.yml  .gitignore  .todo  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  TODO.md  exception-draft.txt  release_notes.md  run_in_sdk
src/: CMakeLists.txt
src/But/: ConstexprAssert.hpp  ConstexprAssert.ut.cpp  Exception.cpp  Exception.hpp  Exception.ut.cpp  Exception.utg.cpp  Guard.hpp  Guard.ut.cpp  NotNull.hpp  NotNull.ut.cpp  Optional.hpp  Optional.ut.cpp  Optional.utg.cpp  UnorderedArray_speed.manual.cpp  ValueWrap.hpp  ValueWrap.ut.cpp  assert.hpp  assert.ut.cpp  assert.utg.cpp  gtest_compat.ut.hpp  placeholder.mt.cpp
src/But/Container/: Array.hpp  Array.ut.cpp  Array.utg.cpp  ArrayWithSize.hpp  ArrayWithSize.ut.cpp  BitPackedSequence.hpp  BitPackedSequence.ut.cpp  BitPackedSequence.utg.cpp  MaxSizedSequence.hpp  MaxSizedSequence.ut.cpp  OffsetIterator.hpp  OffsetIterator.ut.cpp  OverflowingSequence..ut.cpp  OverflowingSequence.hpp  UnorderedArray.hpp  UnorderedArray.ut.cpp  UnorderedArray_speed.manual.cpp
src/But/Format/: Invalid.hpp  Parsed.hpp  apply.hpp  format.hpp  format.mt.cpp  format.mtg.cpp  format.ut.cpp  toString.hpp
src/But/Format/detail/: common.hpp  (+26 more)
src/But/Log/: ExampleLogger.manual.cpp  Exception.hpp  ForeginDestination.hpp  ForeginDestination.ut.cpp  Format.cpp  Format.hpp  Format.ut.cpp  Logger.hpp  Logger.manual.cpp  Logger.ut.cpp  LoggerProxy.hpp  LoggerProxy.ut.cpp  LoggerProxyThrowing.hpp  LoggerProxyThrowing.ut.cpp  LoggerThrowing.hpp  LoggerThrowing.ut.cpp  LoggerThrowing.utg.cpp  Priority.cpp  Priority.hpp  Priority.ut.cpp  Proxy.hpp  Proxy.ut.cpp  ProxyThrowing.hpp  ProxyThrowing.ut.cpp  README.md  api.manual.cpp  logPerformanceTest.manual.cpp  logstashExample.manual.cpp
src/But/Mpl/: FreeOperators.hpp  FreeOperators.ut.cpp  NamedVariadicTemplate.hpp  NamedVariadicTemplate.ut.cpp  NamedVariadicTemplate.utg.cpp  ParseError.hpp  SizeTypeFor.hpp  SizeTypeFor.ut.cpp  SizeTypeFor.utg.cpp  ValueWrap.hpp  ValueWrap.ut.cpp  parse.hpp  parse.ut.cpp
src/But/OLD_LOG_TMP/: ProxyThrowing.hpp  ProxyThrowing.ut.cpp  logstashExample.manual.cpp
src/But/Pattern/: AbstractFactory.hpp  AbstractFactory.ut.cpp  AbstractFactory.utg.cpp  Dispatcher.hpp  Dispatcher.ut.cpp  DispatcherMock.hpp  DispatcherMock.ut.cpp  DispatcherMock.utg.cpp  DispatcherTestStructure.ut.hpp
src/But/System/: CpuTimer.hpp  CpuTimer.ut.cpp  Descriptor.hpp  Descriptor.it.cpp  Descriptor.itg.cpp  Epoll.cpp  Epoll.hpp  Epoll.it.cpp  FsError.hpp  SocketPair.hpp  SocketPair.it.cpp  TempFile.cpp  TempFile.hpp  TempFile.it.cpp  makeNonblocking.hpp  makeNonblocking.it.cpp  syscallRetry.hpp  syscallRetry.ut.cpp
src/But/Threading/: ActiveObject.hpp  ActiveObject.ut.cpp  ActiveObject.utg.cpp  BasicLockable.hpp  BasicLockable.ut.cpp  BasicLockable.utg.cpp  BasicLockableWithLockProxyProvider.mt.cpp  BasicLockableWithLockProxyProvider.mtg.cpp  CacheLine.hpp  CacheLine.ut.cpp  Event.hpp  Event.ut.cpp  Event.utg.cpp  Fifo.hpp  Fifo.ut.cpp  Fifo.utg.cpp  GenericActiveObject.hpp  JoiningThread.hpp  JoiningThread.utg.cpp  LockProxy.hpp  LockProxy.ut.cpp  LockProxy.utg.cpp  LockProxyProvider.hpp  LockProxyProvider.ut.cpp  LockProxyProvider.utg.cpp  ThreadPool.hpp  ThreadPool.ut.cpp  ThreadPoolBoostPolicy.hpp  ThreadPoolStdPolicy.hpp  ThreadsCount.hpp  ThreadsCount.ut.cpp  WaitWrapper.hpp
src/But/detail/: Exception.hpp  testAddressSanitizer.manual.cpp  testLeak.manual.cpp  testThreadSanitizer.manual.cpp  testUndefinedBehaviorSanitizer.manual.cpp  tsan.hpp
src/cmake/: coverage.cmake  flags.cmake  install.cmake  sanitizers.cmake  sources.cmake  tests.cmake
src/cmake/flags/: clang11.cmake  clang9.cmake  gcc.cmake  gcc12.cmake
src/cmake/modes/: debug.cmake
src/cmake/toolchains/: clang.cmake  clang11.cmake  clang13.cmake  clang14.cmake  clang15.cmake  clang16.cmake  clang39.cmake  clang4.cmake  clang50.cmake  clang7.cmake  clang8.cmake  clang9.cmake  default-gcc.cmake  gcc.cmake  gcc10.cmake  gcc11.cmake  gcc12.cmake  gcc6.cmake  gcc7.cmake  gcc8.cmake  gcc9.cmake
(+379 files in other folders)
